--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							<td class="borde">1UYVS24852U867802</td>
 							<td class="borde">185WS6</td>
 							<td class="borde"></td>
-							<td class="borde"></td>
+							<td class="borde">USA</td>
 							<td class="borde">2</td>
 							<td class="borde">0469856</td>
 						</tr>
